--- a/credit_card_dataset_for_clustering.ipynb
+++ b/credit_card_dataset_for_clustering.ipynb
@@ -1504,7 +1504,7 @@
    "id": "f737a609",
    "metadata": {},
    "source": [
-    "🔚 Conclusion\n",
+    "# Conclusion\n",
     "\n",
     "Ce notebook a permis d'explorer et de segmenter le dataset des clients de cartes de crédit en utilisant des techniques de clustering. Voici les points clés :\n",
     "\n",
